@@ -6,7 +6,7 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.UUID;
 
 import org.springframework.stereotype.Service;
@@ -46,7 +46,7 @@ public class FileServiceImpl implements FileService {
 
 		//STEP-5: File Copy
 		
-		Files.copy(file.getInputStream(), Paths.get(filePath));
+		Files.copy(file.getInputStream(), Path.of(filePath));
 		
 		return fileName1;
 	}
